deepseek for github

--- a/.github/workflows/1_process_new_pdf.yml
+++ b/.github/workflows/1_process_new_pdf.yml
@@ -34,6 +34,8 @@ jobs:
     - name: Process PDF to Condensed Text
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_KEY }}
+        DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+        PREFERRED_AI_PROVIDER: 'DeepSeek'
         WORKFLOW_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
         SERVER_URL: 'https://clerky-uzni.onrender.com'
       run: python scripts/1_process_pdf.py
