--- a/.github/workflows/track-api-usage.yml
+++ b/.github/workflows/track-api-usage.yml
@@ -24,6 +24,7 @@ jobs:
         run: node scripts/track-api-usage.js
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
           
       - name: Commit and push changes
         run: |
