--- a/.github/workflows/1_process_new_pdf.yml
+++ b/.github/workflows/1_process_new_pdf.yml
@@ -1,4 +1,4 @@
-name: 1. Process New PDF
+name: 1. Process New PDF (Simplified - PDF to Text Only)
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
       - 'guidance/*.pdf'
 
 jobs:
-  create_condensed_text:
+  convert_pdf_to_text:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pypdf2 tiktoken openai pdfminer.six pdf2image pytesseract requests
+        pip install pypdf2 pdfminer.six pdf2image pytesseract requests
         sudo apt-get update && sudo apt-get install -y tesseract-ocr poppler-utils
 
     - name: Reset local changes
@@ -31,11 +31,12 @@ jobs:
         git fetch origin
         git reset --hard origin/main
         
-    - name: Process PDF to Condensed Text
+    - name: Convert PDF to Text Only
       env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_KEY }}
-        DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
-        PREFERRED_AI_PROVIDER: 'DeepSeek'
+        # Commenting out AI-related environment variables as we no longer need them
+        # OPENAI_API_KEY: ${{ secrets.OPENAI_KEY }}
+        # DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+        # PREFERRED_AI_PROVIDER: 'DeepSeek'
         WORKFLOW_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
         SERVER_URL: 'https://clerky-uzni.onrender.com'
       run: python scripts/1_process_pdf.py
@@ -44,12 +45,13 @@ jobs:
       run: |
         git config --global user.email "Clerky2024@gmail.com"
         git config --global user.name "Ian Nouvel"
-        git add guidance/condensed/ guidance/list_of_guidelines.txt
+        # Only commit the text files in guidance/ directory, not condensed/
+        git add guidance/*.txt guidance/list_of_guidelines.txt
         git status
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
-          git commit -m "Added condensed text and updated guidelines list"
+          git commit -m "Added text version of PDF and updated guidelines list"
           git pull --rebase origin main
           git push
         fi
