--- a/.github/workflows/2_extract_terms.yml
+++ b/.github/workflows/2_extract_terms.yml
@@ -1,42 +1,59 @@
-name: 2. Extract Significant Terms
+# DISABLED WORKFLOW - NO LONGER EXTRACTING SIGNIFICANT TERMS
+name: 2. Extract Significant Terms (DISABLED)
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'guidance/condensed/**'
+  # Disabled - no triggers
+  workflow_dispatch:
+    inputs:
+      disabled:
+        description: 'This workflow is disabled'
+        default: 'true'
 
 jobs:
-  extract_terms:
+  disabled_job:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        token: ${{ secrets.WORKFLOW_PAT }}
-    - uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install tiktoken openai
+      - name: Workflow Disabled
+        run: echo "This workflow has been disabled. We no longer extract significant terms from PDFs."
 
-    - name: Extract Significant Terms
-      env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_KEY }}
-        DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
-        PREFERRED_AI_PROVIDER: 'DeepSeek'
-      run: python scripts/2_extract_terms.py
-
-    - name: Commit significant terms
-      run: |
-        git config --global user.email "Clerky2024@gmail.com"
-        git config --global user.name "Ian Nouvel"
-        git pull
-        git add guidance/significant_terms/
-        git commit -m "Added significant terms" || echo "No changes to commit"
-        git push || echo "No changes to push"
-      env:
-        GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
+# ORIGINAL WORKFLOW COMMENTED OUT:
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'guidance/condensed/**'
+#
+# jobs:
+#   extract_terms:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#       with:
+#         token: ${{ secrets.WORKFLOW_PAT }}
+#     - uses: actions/setup-python@v2
+#       with:
+#         python-version: '3.8'
+#     
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install tiktoken openai
+#
+#     - name: Extract Significant Terms
+#       env:
+#         OPENAI_API_KEY: ${{ secrets.OPENAI_KEY }}
+#         DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+#         PREFERRED_AI_PROVIDER: 'DeepSeek'
+#       run: python scripts/2_extract_terms.py
+#
+#     - name: Commit significant terms
+#       run: |
+#         git config --global user.email "Clerky2024@gmail.com"
+#         git config --global user.name "Ian Nouvel"
+#         git pull
+#         git add guidance/significant_terms/
+#         git commit -m "Added significant terms" || echo "No changes to commit"
+#         git push || echo "No changes to push"
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
