--- a/.github/workflows/3_generate_summary.yml
+++ b/.github/workflows/3_generate_summary.yml
@@ -1,46 +1,63 @@
-name: 3. Generate Summary
+# DISABLED WORKFLOW - NO LONGER GENERATING SUMMARIES
+name: 3. Generate Summary (DISABLED)
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'guidance/significant_terms/*.txt'
+  # Disabled - no triggers
+  workflow_dispatch:
+    inputs:
+      disabled:
+        description: 'This workflow is disabled'
+        default: 'true'
 
 jobs:
-  generate_summary:
+  disabled_job:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0  # This ensures we get the full history
-    
-    - uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install tiktoken openai requests
+      - name: Workflow Disabled
+        run: echo "This workflow has been disabled. We no longer generate summaries from significant terms."
 
-    - name: Generate Summary
-      env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_KEY }}
-        DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
-        PREFERRED_AI_PROVIDER: 'DeepSeek'
-        WORKFLOW_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
-        SERVER_URL: 'https://clerky-uzni.onrender.com'
-      run: python scripts/3_generate_summary.py
-
-    - name: Commit and push summary
-      run: |
-        git config --global user.email "Clerky2024@gmail.com"
-        git config --global user.name "Ian Nouvel"
-        git add guidance/summary/
-        git stash
-        git pull origin main --rebase
-        git stash pop
-        git add guidance/summary/
-        git commit -m "Added summary" || echo "No changes to commit"
-        git push || echo "Could not push changes" 
+# ORIGINAL WORKFLOW COMMENTED OUT:
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'guidance/significant_terms/*.txt'
+#
+# jobs:
+#   generate_summary:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#       with:
+#         fetch-depth: 0  # This ensures we get the full history
+#     
+#     - uses: actions/setup-python@v2
+#       with:
+#         python-version: '3.8'
+#     
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install tiktoken openai requests
+#
+#     - name: Generate Summary
+#       env:
+#         OPENAI_API_KEY: ${{ secrets.OPENAI_KEY }}
+#         DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+#         PREFERRED_AI_PROVIDER: 'DeepSeek'
+#         WORKFLOW_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+#         SERVER_URL: 'https://clerky-uzni.onrender.com'
+#       run: python scripts/3_generate_summary.py
+#
+#     - name: Commit and push summary
+#       run: |
+#         git config --global user.email "Clerky2024@gmail.com"
+#         git config --global user.name "Ian Nouvel"
+#         git add guidance/summary/
+#         git stash
+#         git pull origin main --rebase
+#         git stash pop
+#         git add guidance/summary/
+#         git commit -m "Added summary" || echo "No changes to commit"
+#         git push || echo "Could not push changes" 
