--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^5.1.1",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.28.0",
+    "pdf-parse": "^1.1.1",
     "punycode": "^2.3.1",
     "string-similarity": "^4.0.4",
     "winston": "^3.8.1"
